--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -31,7 +31,7 @@
                         :</strong></p><p class="col-md-6">@user.firstName.getOrElse("None")</p>
                 </div>
                 <div class="row">
-                    <p class="col-md-6"><strong>@messages("last.name")
+             np       <p class="col-md-6"><strong>@messages("last.name")
                         :</strong></p><p class="col-md-6">@user.lastName.getOrElse("None")</p>
                 </div>
                 <div class="row">
@@ -41,6 +41,9 @@
                 <div class="row">
                     <p class="col-md-6"><strong>@messages("email")
                         :</strong></p><p class="col-md-6">@user.email.getOrElse("None")</p>
+                </div>
+                <div class="row">
+                    <button type="button" class="btn btn-primary"><a href="https://localhost:8080" style="color: white">LETS PLAY</a></button>
                 </div>
             </div>
         </div>
