--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,16 +13,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/png" href="@assets.path("images/favicon.png")">
+        <link rel="shortcut icon" type="image/png" href="@assets.path(s"images/favicon.png")">
         <title>@title</title>
         <link @{CSPNonce.attr} href="//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600" rel="stylesheet">
         <link @{CSPNonce.attr} href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
         @webJarsUtil.locate("bootstrap.min.css").css(CSPNonce.attrMap)
-        <link @{CSPNonce.attr} rel="stylesheet" href="@assets.path("styles/main.css")">
+        <link @{CSPNonce.attr} rel="stylesheet" href="@assets.path("styles/main.css")"/>
             <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
             <!--[if lt IE 9]>
-            <script @{CSPNonce.attr} src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script @{CSPNonce.attr} src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+            <script @{CSPNonce.attr} src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"/>
+            <script @{CSPNonce.attr} src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"/>
             <![endif]-->
     </head>
     <body>
