--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -43,7 +43,7 @@
                         :</strong></p><p class="col-md-6">@user.email.getOrElse("None")</p>
                 </div>
                 <div class="row">
-                    <button type="button" class="btn btn-primary"><a href="https://localhost:8080" style="color: white">
+                    <button type="button" class="btn btn-primary"><a href="https://pwamathscrabble.herokuapp.com/" style="color: white">
                         LETS PLAY</a></button>
                 </div>
             </div>
